--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/textView2" android:layout_marginTop="8dp"
+            android:id="@+id/gameCountText" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/myHandImage" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/resultLabel"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textStyle="bold"/>
