--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,51 +7,33 @@
         android:layout_height="match_parent"
         tools:context=".ResultActivity">
 
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/resultLabel"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/myHandImage"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/frameLayout"/>
-    <ImageView
-            android:layout_width="160dp"
-            android:layout_height="160dp" app:srcCompat="@drawable/gu"
-            android:id="@+id/myHandImage" android:scaleType="fitCenter"
-            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/backButton"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toStartOf="@+id/comHandImage"/>
     <ImageView
             android:layout_width="130dp"
             android:layout_height="200dp" app:srcCompat="@drawable/com_gu"
-            android:id="@+id/comHandImage" android:scaleType="fitCenter"
-            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/myHandImage"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintTop_toTopOf="@+id/myHandImage"/>
-    <Button
-            android:text="@string/back_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/backButton" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-    />
+            android:id="@+id/myHandImage" android:scaleType="fitCenter"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/resultLabel"/>
     <FrameLayout
-            android:layout_width="393dp"
-            android:layout_height="277dp"
+            android:layout_width="390dp"
+            android:layout_height="270dp"
             android:id="@+id/frameLayout"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="8dp"/>
+    <TextView
+            android:text="@string/result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/resultLabel"
+            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+            app:layout_constraintTop_toBottomOf="@+id/myHandImage" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent">
-        <VideoView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/videoView3"/>
-    </FrameLayout>
+            android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:textStyle="bold"
+            android:textSize="24sp" android:background="@drawable/textshape" android:textAlignment="center"
+            android:paddingStart="5dp" android:paddingEnd="5dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
